--- a/templates/index.html
+++ b/templates/index.html
@@ -5,33 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.1.8/semantic.min.css">
-    <script type = "stylesheet" src = "{{ url_for('static', filename = 'style.css') }}" ></script>
+    <link rel= "stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>ACcurate</title>
 </head>
 <body>
-    <div class="ui secondary  menu">
-        <a class="item">Home </a>
-        <a class="item active">Messages </a>
-        <a class="item">Teman </a>
-        <div class="right menu">
-            <div class="item">
-            <div class="ui icon input">
-                <input type="text" placeholder="Search...">
-                <i class="search link icon"></i>
-            </div>
-            </div>
-            <a class="ui item">Catat Keluar </a>
+    <div class="ui stackable container menu">
+        <div class="item">
+          <img src="assets/images/logo.png">
         </div>
+        <a class="item">Features</a>
+        <a class="item">Testimonials</a>
+        <a class="item">Sign-in</a>
     </div>
-    <div class="ui message">
-        <div class="header">Informasi Perangkat </div>
-        <ul class="list">
-            <li>Nama: Polytron</li>
-        </ul>
-    </div>
-    <button class="">
 
-    </button>
+    <h3 class="ui center aligned header">Informasi Perangkat</h3>
+    
+    <div class="ui container">
+      <table class="ui celled table">
+        <tbody>
+          <tr>
+            <td>
+              <h4 class="ui image header">
+                <div class="content">
+                  AC
+                  <div class="sub header">Air Conditioner
+                </div>
+              </div>
+            </td>
+            <td>
+              Polytron
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="ui container buttons">
+        <button class="ui circular icon button power-btn">
+            ON
+        </button>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.1.8/dist/semantic.min.js"></script>
 </body>
 </html>
