--- a/templates/index.html
+++ b/templates/index.html
@@ -4,49 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.1.8/semantic.min.css">
+    <title>AC-curate</title>
     <link rel= "stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>ACcurate</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <div class="ui stackable container menu">
-        <div class="item">
-          <img src="assets/images/logo.png">
+    <div class="grid-container">
+        <h3 class="title grid-item">Informasi Perangkat</h3>
+        <div class="grid-item">
+            <div class="table-container">
+                <div class="table-item">Merk AC</div>
+                <div class="table-item">Changchong</div>
+            </div>
+            <div class="table-container">
+                <div class="table-item">Current Temperature</div>
+                <div class="table-item">30 C</div>
+            </div>
+            <div class="table-container">
+                <div class="table-item">Current Humidity</div>
+                <div class="table-item">90 %</div>
+            </div>
         </div>
-        <a class="item">Features</a>
-        <a class="item">Testimonials</a>
-        <a class="item">Sign-in</a>
+        <div class="grid-item">
+            <button class="power-btn" onclick="changeStatus()">
+                <i class="material-icons">power_settings_new</i>
+                <h2 id="status" class="status-on">ON</h2>
+            </button>
+        </div>
     </div>
-
-    <h3 class="ui center aligned header">Informasi Perangkat</h3>
-    
-    <div class="ui container">
-      <table class="ui celled table">
-        <tbody>
-          <tr>
-            <td>
-              <h4 class="ui image header">
-                <div class="content">
-                  AC
-                  <div class="sub header">Air Conditioner
-                </div>
-              </div>
-            </td>
-            <td>
-              Polytron
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="ui container buttons">
-        <button class="ui circular icon button power-btn">
-            ON
-        </button>
-    </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.1.8/dist/semantic.min.js"></script>
+    <script>
+        function changeStatus() {
+            const status = document.getElementById("status");
+            if (status.classList.contains('status-on')) {
+                status.classList.remove('status-on');
+                status.classList.add('status-off');
+                status.innerHTML = "OFF";
+            } else if (status.classList.contains('status-off')) {
+                status.classList.remove('status-off');
+                status.classList.add('status-on');
+                status.innerHTML = "ON";
+            }
+        }
+    </script>
 </body>
 </html>
