--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,7 @@ button {
 button:active {
     background: #d1d1d1;
 }
+a { text-decoration: none; }
 h1,h2,h3,h4,h5,h6 {
     font-family: 'Bungee', cursive;
 }
